--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node app.ts"
+    "start": "ts-node app.ts",
+    "dev": "nodemon app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "json-version-control": "^1.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.1.7"
   }
 }
